--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -118,6 +118,19 @@
       --angle: 360deg;
     }
   }
+  
+  @keyframes shine {
+    0% {
+      transform: translateX(-100%);
+    }
+    100% {
+      transform: translateX(100%);
+    }
+  }
+  
+  .animate-shine {
+    animation: shine 0.6s ease-in-out;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
